@@ -1,3 +1,5 @@
+* BUG#6616 Allow termination in previous activation period
+
 Version 1.12 - 2017-04-28
 * FEA#0000 Add Contract Notifications
 * FEA#0000 Add chains for decline inactive quotes and terminate contract batches
